fix: quarto add 설치 시 경로 호환성 수정
- .gitignore에서 template.typ 제거 (extension 핵심 파일, git 포함 필요)
- _extension.yml: format-resources 추가 (cover.typ, logo.svg)
- template.typ: import/image 경로를 format-resources 기반으로 변경
- setup.R/create_cover.R: get_extension_path() 양쪽 경로 탐색
- template.qmd: source() 경로 동적 탐지, font-paths 양쪽 지정
- template.qmd: YAML 예시 코드블록 이스케이프 수정
- _extension.yml: version 1.0.1, author 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Quarto 생성 파일
 *.pdf
-template.typ
 *.knit.md
 *.rmarkdown
 *_files/
@@ -20,3 +19,5 @@ cover.png
 Thumbs.db
 
 /.luarc.json
+cover.typ
+logo.svg
